# labels

./: .gitignore  labelling.hs  literature.aux  literature.bbl  literature.tex  module Labeling where.hs  thesis.blg  thesis.tex  workspace.code-workspace
code/eva/: README.md  eva.cabal  stack.yaml  testformat.txt
code/eva/.stack-work/: stack.sqlite3
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/eva-0.1.0.0-7LpzJZVbmUrAHM5lpjNHcp/: Paths_eva.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/eva-0.1.0.0-7LpzJZVbmUrAHM5lpjNHcp/Eva/: Assignment.hi  NonoUtil.hi  SATLabeling.hi  SATLabelingExtensible.hi  Test.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/hgeometry-0.11.0.0-Due7oyseuEN5V9T8mQnF64/Data/: Geometry.hi  PlaneGraph.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/hgeometry-0.11.0.0-Due7oyseuEN5V9T8mQnF64/Graphics/: Camera.hi  Render.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/hgeometry-combinatorial-0.11.0.0-6RGAj7tGex4J8QkOnHoNcg/Algorithms/: BinarySearch.hi  DivideAndConquer.hi  FloydWarshall.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/hgeometry-combinatorial-0.11.0.0-6RGAj7tGex4J8QkOnHoNcg/Control/: CanAquire.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/hgeometry-combinatorial-0.11.0.0-6RGAj7tGex4J8QkOnHoNcg/Data/: BinaryTree.hi  CircularSeq.hi  DynamicOrd.hi  Ext.hi  IndexedDoublyLinkedList.hi  Intersection.hi  LSeq.hi  Measured.hi  OrdSeq.hi  Permutation.hi  PlanarGraph.hi  Range.hi  UnBounded.hi  Util.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/impop-0.1.0.0-9ielXiOmg4qKayMQgsTsnj/: CurveArrangement.hi  Draw.hi  Glossify.hi  Nonogram.hi  PSDGlossApp.hi  Paths_impop.hi  Popular.hi  Test.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/impop-0.1.0.0-9ielXiOmg4qKayMQgsTsnj/CurveArrangement/: Basic.hi  Construct.hi  Dynamic.hi  ForceDirectedStubs.hi  Ipe.hi  Loader.hi  Puz.hi  Selectable.hi  Types.hi  Visible.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/impop-0.1.0.0-9ielXiOmg4qKayMQgsTsnj/Misc/: Ipe.hi  SpanningTree.hi  Time.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/impop-0.1.0.0-9ielXiOmg4qKayMQgsTsnj/Nonogram/: Ipe.hi  PathType.hi  Puz.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/impop-0.1.0.0-IpfCV865obd6HgP90ankZs/: CurveArrangement.hi  Draw.hi  Glossify.hi  Nonogram.hi  PSDGlossApp.hi  Paths_impop.hi  Popular.hi
code/eva/.stack-work/install/a75b1cd5/lib/x86_64-windows-ghc-8.10.3/mios-1.6.2-6QVwGF8DwbIGSKdUGrFryJ/: Paths_mios.hi
code/eva/.stack-work/install/a75b1cd5/pkgdb/: eva-0.1.0.0-7LpzJZVbmUrAHM5lpjNHcp.conf  hgeometry-0.11.0.0-Due7oyseuEN5V9T8mQnF64.conf  hgeometry-combinatorial-0.11.0.0-6RGAj7tGex4J8QkOnHoNcg.conf  hgeometry-ipe-0.11.0.0-HlhoGhfpVxk9R3gyrh6a30.conf  impop-0.1.0.0-9ielXiOmg4qKayMQgsTsnj.conf  mios-1.6.2-6QVwGF8DwbIGSKdUGrFryJ.conf  package.cache
code/eva/app/: TestLabelPipeline.hs
code/eva/ipe/: evenmoretriangles_mark3.ipe  evenmoretriangles_mark3.labeled.ipe  evenmoretriangles_mark3.planar.ipe  evenmoretriangles_mark3.snapped.ipe  triangles.ipe  triangles.snapped.ipe  triangles2.ipe  triangles2.snapped.ipe  triangles3.ipe  triangles3.planar.ipe  triangles3.snapped.ipe  triangles4.planar.ipe  triangles4.snapped.ipe
code/eva/ipe/Bugged/: city.ipe  city.planar.ipe  city.snapped.ipe  coffee.ipe  coffee.planar.ipe  coffee.snapped.ipe  flower.ipe  note.ipe  note.planar.ipe  note.snapped.ipe  pear.ipe  pear.labeled.ipe  pear.snapped.ipe
code/eva/ipe/Dynamic/: triangles.labeled.ipe  triangles2.labeled.ipe  triangles3.labeled.ipe  triangles4.labeled.ipe
code/eva/ipe/SATextensible/: evenmoretriangles_mark3.labeled.ipe  triangles.labeled.ipe  triangles2.labeled.ipe  triangles3.labeled.ipe  triangles4.labeled.ipe
code/eva/log/: caf.txt  car.txt  chopped.txt  frame.txt  funlabels.txt  labels.txt  newpaths.txt  nonogram.txt  oldpaths.txt  points.txt  snapped.txt  solution.txt  tree.txt  unlabels.txt
code/eva/puz/: pear.puz  triangles.puz
code/eva/src/Eva/: Assignment.hs  DynamicLabeling.hs  SATLabeling.hs  SATLabelingExtensible.hs  TestClueBox.hs
impop/: hie.yaml  impop.cabal  stack.yaml
impop/extra/: BezierSpline.hs
impop/hgeometry-ipe/src/Data/Geometry/Ipe/: IpeOut.hs  Reader.hs  Writer.hs
impop/hgeometry/src/Algorithms/Geometry/EuclideanMST/: EuclideanMST.hs
impop/ipe/: drop.labeled.ipe  dynamic.labeled.ipe  fox.ipe  house.ipe  house.labeled.ipe  house2.ipe  house2.labeled.ipe  house3.ipe  house4.ipe  house5.ipe  house6.ipe  lens.ipe  note.ipe  note.labeled.ipe  square.ipe  star.ipe  star.labeled.ipe  star2.ipe  star2.labeled.ipe  star3.ipe  star3.labeled.ipe  star_boundary.ipe  star_boundarycircle.ipe  star_boundarystar.ipe  star_boundarystar.labeled.ipe  triangle.ipe  triangle.labeled.ipe
impop/log/: caf.txt  car.txt  chopped.txt  converted.txt  frame.txt  labels.txt  nonogram.txt  points.txt  segments.txt  snapped.txt  solution.txt  tree.txt  unlabels.txt
impop/mios-master/: .gitlab-ci-stack.yaml
impop/mios-master/test/: MiosSpec.hs
impop/puz/: drop.puz  dynamic.puz  house.puz  house2.puz  note.puz  star.puz  star2.puz  star3.puz  star_boundarystar.puz  triangle.puz
impop/src/: Convert.hs  CurveArrangement.hs  DynamicLabelingTest.hs  DynamicLabelingTest_old.hs  Example.hs  LabelTest.hs  Labeling.hs  Main.hs  Nonogram.hs  SATLabelingTest.hs  Tests.hs
impop/src/Algorithms/Geometry/: Misc.hs
impop/src/CurveArrangement/: Basic.hs  Construct.hs  ForceDirectedStubs.hs  Ipe.hs  Puz.hs  Types.hs
impop/src/Data/: Extra.hs
impop/src/Data/Geometry/: Bezier.hs
impop/src/Data/Geometry/Bezier/: Cubic.hs
impop/src/Data/Geometry/PlanarSubdivision/: ForceDirected.hs  More.hs
impop/src/Eva/: DynamicLabeling.hs  SATLabeling.hs
impop/src/Extra/: BezierSpline.hs
impop/src/Nonogram/: Ipe.hs  Puz.hs
impop/src/PSDGlossApp/: Common.hs  Forcible.hs  Selectable.hs  Traceable.hs  Visible.hs
(+325 files in other folders)
