cabal-version: 1.12

name:           impop
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/impop#readme>
homepage:       https://github.com/githubuser/impop#readme
bug-reports:    https://github.com/githubuser/impop/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/impop

library
  exposed-modules:
      Main, Draw, Tests, LabelTest, DynamicLabelingTest, SATLabelingTest, Convert, CurveArrangement
  other-modules:
      Paths_impop
    , Data.Geometry.Bezier
    , Data.Geometry.PlanarSubdivision.More
    , Data.Geometry.PlanarSubdivision.Dynamic
    , Data.Geometry.BezierSpline
    , Algorithms.Geometry.Misc
    , Eva.SATLabelin
    , Extra.BezierSpline
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , hgeometry >= 0.10
    , hgeometry-combinatorial >= 0.10
    , hgeometry-ipe >= 0.10
    , Rasterific
    , gloss
    , vector
    , lens
    , containers
    , data-default
    , hlist
    , colour
    , text
    , clock
    , split
    , vinyl
    , mios
    , array
  default-language: Haskell2010
  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , AutoDeriveTypeable


                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses

executable impop-exe
  main-is: Main.hs
  other-modules:
      Paths_impop
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , impop
  default-language: Haskell2010

test-suite impop-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_impop
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , impop
  default-language: Haskell2010
